compiler/testData/diagnostics/tests/controlFlowAnalysis/mainWithWarningOnUnusedParam.kt
// !LANGUAGE: +WarningOnMainUnusedParameter

fun main(<!UNUSED_PARAMETER!>args<!>: Array<String>) {

}